# validataclass

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TEST  TODO.md  pyproject.toml  pytest.ini  requirements.txt  run_mypy.py  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test-reports.yml  tests.yml
docs/: 01-introduction.md  01-summary.md  02-error-handling.md  02-inputs.md  03-basic-validators.md  03-fields.md  04-lists-and-dicts.md  05-dataclasses.md  06-build-your-own.md  07-mypy-plugin.md  index.md
src/validataclass/: __init__.py
src/validataclass/dataclasses/: __init__.py  dataclasses.py  defaults.py  validataclass.py  validataclass_field.py  validataclass_mixin.py
src/validataclass/exceptions/: __init__.py  base_exceptions.py  common_exceptions.py  dataclass_exceptions.py  datetime_exceptions.py  dict_exceptions.py  email_exceptions.py  list_exceptions.py  meta_exceptions.py  misc_exceptions.py  number_exceptions.py  regex_exceptions.py  string_exceptions.py  url_exceptions.py
src/validataclass/helpers/: __init__.py  dataclass_defaults.py  dataclass_mixins.py  dataclasses.py  datetime_range.py  unset_value.py
src/validataclass/internal/: internet_helpers.py
src/validataclass/mypy/: __init__.py
src/validataclass/validators/: __init__.py  allow_empty_string.py  any_dict_validator.py  any_of_validator.py  anything_validator.py  big_integer_validator.py  boolean_validator.py  dataclass_validator.py  date_validator.py  datetime_validator.py  decimal_validator.py  dict_validator.py  discard_validator.py  email_validator.py  enum_validator.py  float_to_decimal_validator.py  float_validator.py  integer_validator.py  list_validator.py  none_to_unset_value.py  noneable.py  numeric_validator.py  regex_validator.py  reject_validator.py  string_validator.py  time_validator.py  url_validator.py  validator.py
src/wtfjson/: __init__.py  abstract_input.py  dict_input.py  exceptions.py  external.py  list_input.py  util.py
src/wtfjson/exceptions/: __init__.py  common_exceptions.py  dataclass_exceptions.py  datetime_exceptions.py  dict_exceptions.py  email_exceptions.py  enum_exceptions.py  list_exceptions.py  meta_exceptions.py  misc_exceptions.py  number_exceptions.py  regex_exceptions.py  string_exceptions.py  url_exceptions.py
src/wtfjson/fields/: __init__.py  boolean_field.py  date_field.py  date_time_field.py  decimal_field.py  enum_field.py  field.py  float_field.py  integer_field.py  list_field.py  object_field.py  string_field.py  unbound_field.py
src/wtfjson/helpers/: __init__.py  dataclass_defaults.py  dataclasses.py  datetime_range.py  unset_value.py
src/wtfjson/internal/: internet_helpers.py
src/wtfjson/validators/: __init__.py  any_of.py  any_of_validator.py  boolean_validator.py  dataclass_validator.py  date.py  date_time.py  date_time_range.py  date_validator.py  datetime_validator.py  decimal_validator.py  dict_validator.py  email.py  email_validator.py  enum_validator.py  float_to_decimal_validator.py  float_validator.py  input_required.py  integer_validator.py  length.py  list_length.py  list_validator.py  none_of.py  noneable.py  number_range.py  regex_validator.py  regexp.py  string_validator.py  time_validator.py  type.py  url.py  url_validator.py  validator.py
tests/: RemoveNoneTest.py  list_input_test.py  optional_required_test.py  populate_to_test.py  test_utils.py  test_utils_test.py  to_dataclass_test.py
tests/dataclasses/: _helpers.py  dataclass_mixins_test.py  dataclasses_test.py  defaults_test.py  validataclass_field_test.py  validataclass_mixin_test.py  validataclass_test.py
tests/exceptions/: base_exceptions_test.py  common_exceptions_test.py  dataclass_exceptions_test.py  dict_exceptions_test.py  list_exceptions_test.py
tests/fields/: boolean_field_test.py  date_field_test.py  date_time_field_test.py  decimal_field_test.py  enum_field_test.py  integer_field_test.py  list_field_test.py  object_field_test.py  string_field_test.py  unbound_field_test.py
tests/helpers/: _compatibility_imports_test.py  dataclass_defaults_test.py  dataclass_mixins_test.py  dataclasses_test.py  datetime_range_test.py  unset_value_test.py
tests/internal/: internet_helpers_test.py
tests/mypy/: pytest_mypy.ini  pytest_pyproject.toml
tests/mypy/dataclasses/: test_defaults.yml  test_validataclass.yml  test_validataclass_field.yml  test_validataclass_subclasses.yml
tests/mypy/helpers/: test_unset_value.yml
tests/mypy/plugin/: test_plugin_config.yml
tests/mypy/validators/: test_allow_empty_string.yml  test_any_dict_validator.yml  test_any_of_validator.yml  test_anything_validator.yml  test_big_integer_validator.yml  test_boolean_validator.yml  test_dataclass_validator.yml  test_date_validator.yml  test_datetime_validator.yml  test_decimal_validator.yml  test_dict_validator.yml  test_discard_validator.yml  test_email_validator.yml  test_enum_validator.yml  test_float_to_decimal_validator.yml  test_float_validator.yml  test_integer_validator.yml  test_list_validator.yml  test_none_to_unset_value.yml  test_noneable.yml  test_numeric_validator.yml  test_regex_validator.yml  test_reject_validator.yml  test_string_validator.yml  test_time_validator.yml  test_url_validator.yml  (+1 more)
tests/validators/: allow_empty_string_test.py  any_of_test.py  any_of_validator_test.py  anything_validator_test.py  big_integer_validator_test.py  boolean_validator_test.py  dataclass_validator_test.py  date_time_range_test.py  date_validator_test.py  datetime_validator_test.py  decimal_validator_test.py  dict_validator_test.py  discard_validator_test.py  email_test.py  email_validator_test.py  enum_validator_test.py  float_to_decimal_validator_test.py  float_validator_test.py  integer_validator_test.py  length_test.py  list_validator_test.py  none_of_test.py  none_to_unset_value_test.py  noneable_test.py  number_range_test.py  numeric_validator_test.py  regex_validator_test.py  regexp_test.py  reject_validator_test.py  string_validator_test.py  time_validator_test.py  url_test.py  url_validator_test.py  validator_test.py
(+44 files in other folders)
