[metadata]
name = validataclass
author = binary butterfly GmbH
author_email = lexi.stelter@binary-butterfly.de
description = Library for input validation designed for (but not restricted to) JSON-based APIs, neatly integrating with dataclasses.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/binary-butterfly/validataclass
project_urls =
    Documentation = https://github.com/binary-butterfly/validataclass/blob/main/docs/index.md
    Changelog = https://github.com/binary-butterfly/validataclass/blob/main/CHANGELOG.md
    Issue Tracker = https://github.com/binary-butterfly/validataclass/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.10
install_requires =
    typing-extensions ~= 4.12

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest ~= 8.3
    pytest-cov ~= 6.0
    coverage ~= 7.6
    coverage-conditional-plugin ~= 0.9
    flake8 ~= 7.1
    mypy ~= 1.13
